--- a/backup/博客资源存放地.md
+++ b/backup/博客资源存放地.md
@@ -1,2 +1,4 @@
-1. 头像
-![avatar](https://github.com/dly023/dly023.github.io/assets/4875907/8fb07da4-d323-47fc-978e-1a02f49376d9)
+1. 头像和 favicon
+![Uploading avatar-removebg-preview.png…]()
+
+
